--- a/configs/rpi_arm64_defconfig
+++ b/configs/rpi_arm64_defconfig
@@ -4,7 +4,7 @@ CONFIG_ARCH_BCM283X=y
 CONFIG_TARGET_RPI_ARM64=y
 CONFIG_NR_DRAM_BANKS=8
 CONFIG_ENV_SIZE=0x4000
-CONFIG_DEFAULT_DEVICE_TREE="bcm2711-rpi-4-b"
+CONFIG_DEFAULT_DEVICE_TREE="bcm2712-rpi-5-b"
 CONFIG_OF_LIBFDT_OVERLAY=y
 CONFIG_DM_RESET=y
 CONFIG_SYS_LOAD_ADDR=0x1000000
@@ -65,3 +65,6 @@ CONFIG_VIDEO_BCM2835=y
 CONFIG_CONSOLE_SCROLL_LINES=10
 CONFIG_PHYS_TO_BUS=y
 # CONFIG_HEXDUMP is not set
+CONFIG_BOOTMETH_EXTLINUX_PXE=y
+CONFIG_CMD_DHCP=y
+CONFIG_BOOTCOMMAND="bootflow scan -lb"
